2010-10-19  Knut Aksel Røysland  <knutroy@ifi.uio.no>

  Node::get_parent(): Removed code duplication.

  * libxml++/nodes/node.cc: get_parent() const: Use const_cast<> to call
  the non-const version, instead of duplicating the code.

2.32.0:

2010-10-14  Murray Cumming  <murrayc@murrayc.com>

	website: Change the mailing list location, because I moved it.

	* docs/index.html: The mailing list is now at gnome.org.

2010-10-03  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/README:
	* MSVC_Net2005/examples/dom_build/dom_build.vcproj:
	* MSVC_Net2005/examples/dom_parse_entities/dom_parse_entities.vcproj:
	* MSVC_Net2005/examples/dom_parser/dom_parser.vcproj:
	* MSVC_Net2005/examples/dom_parser_raw/dom_parser_raw.vcproj:
	* MSVC_Net2005/examples/dom_read_write/dom_read_write.vcproj:
	* MSVC_Net2005/examples/dom_xpath/dom_xpath.vcproj:
	* MSVC_Net2005/examples/dtdvalidation/dtdvalidation.vcproj:
	* MSVC_Net2005/examples/import_node/import_node.vcproj:
	* MSVC_Net2005/examples/sax_exception/sax_exception.vcproj:
	* MSVC_Net2005/examples/sax_parser/sax_parser.vcproj:
	* MSVC_Net2005/examples/sax_parser_build_dom/sax_parser_build_dom.vcproj:
	* MSVC_Net2005/examples/sax_parser_entities/sax_parser_entities.vcproj:
	* MSVC_Net2005/examples/schemavalidation/schemavalidation.vcproj:
	* MSVC_Net2005/examples/textreader/textreader.vcproj:
	* MSVC_Net2005/gendef/gendef.vcproj:
	* MSVC_Net2005/libxml++.sln:
	* MSVC_Net2005/libxml++/libxml++.vcproj:
	* MSVC_Net2008/README:
	* MSVC_Net2008/examples/dom_build/dom_build.vcproj:
	* MSVC_Net2008/examples/dom_parse_entities/dom_parse_entities.vcproj:
	* MSVC_Net2008/examples/dom_parser/dom_parser.vcproj:
	* MSVC_Net2008/examples/dom_parser_raw/dom_parser_raw.vcproj:
	* MSVC_Net2008/examples/dom_read_write/dom_read_write.vcproj:
	* MSVC_Net2008/examples/dom_xpath/dom_xpath.vcproj:
	* MSVC_Net2008/examples/dtdvalidation/dtdvalidation.vcproj:
	* MSVC_Net2008/examples/import_node/import_node.vcproj: